--- a/9-rest-countries-api/complete/src/index.css
+++ b/9-rest-countries-api/complete/src/index.css
@@ -14,6 +14,10 @@ ul {
   list-style-type: none;
 }
 
+a {
+  text-decoration: none;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -22,16 +26,47 @@ body {
   color: #333;
 }
 
+/* Loading spinner */
+.loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.spinner {
+  height: 100px;
+  width: 100px;
+  border: 4px solid #c5c5c5;
+  border-radius: 50%;
+  border-top-color: rgb(255, 0, 0);
+  animation: spin 0.5s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .countries {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 10px;
+  gap: 20px;
 }
 
 .countries article {
   background-color: white;
   padding: 10px;
   border-radius: 5px;
+  color: #333;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease-in;
+}
+
+.countries article:hover {
+  background-color: #f1f1f1;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.15);
 }
 
 .countries article div h4 {
@@ -61,8 +96,17 @@ body {
   .countries {
     grid-template-columns: repeat(3, 1fr);
   }
+}
 
-  img {
-    height: 400px;
+@media (min-width: 1280px) {
+  .countries {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media (min-width: 1536px) {
+  .countries {
+    max-width: 1440px;
+    margin: auto;
   }
 }
