--- a/3-profile-read-more/complete/src/index.css
+++ b/3-profile-read-more/complete/src/index.css
@@ -31,6 +31,10 @@ body {
 
 .people article {
   display: flex;
+  background-color: #f1f1f1;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.15);
 }
 
 .people article div {
