--- a/3-profile-read-more/complete/src/index.css
+++ b/3-profile-read-more/complete/src/index.css
@@ -49,13 +49,13 @@ body {
   .main {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
   }
 }
 
-@media (min-width: 992px) {
-  .people {
-    max-width: 800px;
-    margin: auto;
-    margin-top: 100px;
+@media (min-width: 1280px) {
+  body {
+    max-width: 1200px;
+    margin: 50px auto 0;
   }
 }
