--- a/10-personal-blog/complete/src/index.css
+++ b/10-personal-blog/complete/src/index.css
@@ -17,7 +17,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-  padding: 20px;
+  background-color: #8b5cf6;
 }
 
 a {
