--- a/15-dashboard/complete/src/index.css
+++ b/15-dashboard/complete/src/index.css
@@ -31,6 +31,10 @@ input::placeholder {
   font-family: "Tajawal", sans-serif;
 }
 
+article ol div:last-child {
+  border-bottom: none;
+}
+
 @media (min-width: 1024px) {
   body {
     overflow-y: hidden;
